# forgetty

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  deny.toml  install.sh  launch-dev.sh  prompt.sh  uninstall.sh
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: daemon_hotpath.rs
crates/forgetty-config/: Cargo.toml
crates/forgetty-config/src/: bundled_themes.rs  defaults.rs  lib.rs  loader.rs  schema.rs  theme.rs
crates/forgetty-core/: Cargo.toml
crates/forgetty-core/src/: error.rs  event.rs  lib.rs  platform.rs  types.rs
crates/forgetty-gtk/: Cargo.toml
crates/forgetty-gtk/src/: app.rs  clipboard.rs  code_block.rs  daemon_client.rs  input.rs  lib.rs  osc_notification.rs  preferences.rs  pty_bridge.rs  settings_view.rs  terminal.rs
crates/forgetty-pty/: Cargo.toml
crates/forgetty-pty/src/: lib.rs  multiplexer.rs  process.rs
crates/forgetty-renderer/: Cargo.toml
crates/forgetty-renderer/shaders/: cell.wgsl
crates/forgetty-renderer/src/: atlas.rs  color.rs  context.rs  cursor.rs  damage.rs  grid.rs  images.rs  lib.rs  selection.rs  statusbar.rs
crates/forgetty-renderer/src/shaders/: cell.wgsl
crates/forgetty-session/: Cargo.toml
crates/forgetty-session/src/: byte_log.rs  drain_result.rs  events.rs  layout.rs  lib.rs  manager.rs  pane.rs  pty_bridge.rs  vt_instance.rs  workspace.rs
crates/forgetty-socket/: Cargo.toml
crates/forgetty-socket/src/: framing.rs  handlers.rs  lib.rs  protocol.rs  server.rs
crates/forgetty-socket/tests/: is_attached_rpc.rs  subscribe_output_frames.rs
crates/forgetty-sync/: Cargo.toml
crates/forgetty-sync/src/: endpoint.rs  identity.rs  lib.rs  pairing.rs  qr.rs  registry.rs  stream.rs
crates/forgetty-ui/: Cargo.toml
crates/forgetty-ui/src/: app.rs  clipboard.rs  ghostty_input.rs  input.rs  keybindings.rs  layout.rs  lib.rs  notifications.rs  pane.rs  pane_tree.rs  tab.rs  tab_bar.rs  window.rs
crates/forgetty-viewer/: Cargo.toml
crates/forgetty-viewer/src/: image_viewer.rs  lib.rs  markdown.rs  webview.rs
crates/forgetty-viewer/src/assets/: style.css  viewer.html
crates/forgetty-vt/: Cargo.toml  build.rs
crates/forgetty-vt/src/: ffi.rs  lib.rs  screen.rs  selection.rs  terminal.rs
crates/forgetty-watcher/: Cargo.toml
crates/forgetty-watcher/src/: lib.rs  watcher.rs
crates/forgetty-workspace/: Cargo.toml
crates/forgetty-workspace/src/: lib.rs  persistence.rs  project.rs  session.rs  workspace.rs
docs/: BUGS_AND_LEARNINGS.md  building.md  configuration.md  socket-api.md
docs/adr/: 003-saas-boundary.md  005-windows-terminal-comparison.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  CROSS_COMPILE.md  DAEMON_SYNC_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md
docs/archive/: README.md  architecture-pre-gtk4.md
docs/archive/adr/: 001-vt-library.md  002-rendering-stack.md  003-saas-boundary.md  004-wgpu-vs-ghostty-renderer.md
docs/benchmarks/: baseline.json  typometer-baseline.txt
docs/contributing/: code-style.md  release-process.md  testing.md
docs/harness/: BACKLOG.md  METHODOLOGY.md  QA_REPORT.md  SESSION_STATE.md  SPEC.md
resources/themes/: 0x96f.toml  12-bit-rainbow.toml  3024-day.toml  3024-night.toml  aardvark-blue.toml  abernathy.toml  adventure-time.toml  adventure.toml  adwaita-dark.toml  adwaita.toml  afterglow.toml  aizen-dark.toml  aizen-light.toml  alabaster.toml  alien-blood.toml  andromeda.toml  apple-classic.toml  apple-system-colors-light.toml  apple-system-colors.toml  arcoiris.toml  ardoise.toml  argonaut.toml  arthur.toml  atelier-sulphurpool.toml  atom-one-dark.toml  atom-one-light.toml  atom.toml  aura.toml  aurora.toml  ayu-light.toml  ayu-mirage.toml  ayu.toml  banana-blueberry.toml  batman.toml  belafonte-day.toml  belafonte-night.toml  birds-of-paradise.toml  black-metal-bathory.toml  black-metal-burzum.toml  black-metal-dark-funeral.toml  (+447 more)
scripts/: convert-iterm-themes.py
scripts/perf/: README.md  typometer.sh
src/: cli.rs  daemon.rs  iroh_terminal.rs  lib.rs  main.rs  pair_test.rs  stream_test.rs
tests/stress/: STRESS_TESTS.md  run-longrun.sh  run-stress-tests.sh
tests/vm/: VM_TEST_CHECKLIST.md  run-vm-tests.sh  setup-vm.sh
