[workspace]
resolver = "2"
members = [
    "crates/forgetty-core",
    "crates/forgetty-vt",
    "crates/forgetty-pty",
    "crates/forgetty-renderer",
    "crates/forgetty-ui",
    "crates/forgetty-gtk",
    "crates/forgetty-config",
    "crates/forgetty-viewer",
    "crates/forgetty-watcher",
    "crates/forgetty-workspace",
    "crates/forgetty-socket",
    "crates/forgetty-session",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vikgmdev/forgetty"
homepage = "https://forgetty.dev"
description = "The AI-first agentic terminal emulator"

[workspace.dependencies]
wgpu = "23"
winit = "0.30"
glyphon = "0.7"
cosmic-text = "0.12"
wry = "0.48"
pulldown-cmark = "0.12"
notify = "7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
portable-pty = "0.8"
arboard = "3"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
git2 = "0.19"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_4"] }

[package]
name = "forgetty"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
build = "build.rs"

[[bin]]
name = "forgetty"
path = "src/main.rs"

[dependencies]
forgetty-core = { path = "crates/forgetty-core" }
forgetty-config = { path = "crates/forgetty-config" }
forgetty-gtk = { path = "crates/forgetty-gtk" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
