[workspace]
resolver = "2"
members = [
    "crates/forgetty-core",
    "crates/forgetty-vt",
    "crates/forgetty-pty",
    "crates/forgetty-renderer",
    "crates/forgetty-ui",
    "crates/forgetty-gtk",
    "crates/forgetty-config",
    "crates/forgetty-viewer",
    "crates/forgetty-watcher",
    "crates/forgetty-workspace",
    "crates/forgetty-socket",
    "crates/forgetty-session",
    "crates/forgetty-sync",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vikgmdev/forgetty"
homepage = "https://forgetty.dev"
description = "The AI-first agentic terminal emulator"

[workspace.dependencies]
wgpu = "23"
winit = "0.30"
glyphon = "0.7"
cosmic-text = "0.12"
wry = "0.48"
pulldown-cmark = "0.12"
notify = "7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
portable-pty = "0.8"
arboard = "3"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
git2 = "0.19"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
gdk-pixbuf = "0.20"
iroh = { version = "0.97", default-features = false, features = ["metrics", "portmapper"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
hostname = "0.4"
rand = "0.9"

[package]
name = "forgetty"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
build = "build.rs"

[[bin]]
name = "forgetty"
path = "src/main.rs"

[[bin]]
name = "forgetty-daemon"
path = "src/daemon.rs"

[[bin]]
name = "forgetty-pair-test"
path = "src/pair_test.rs"
required-features = ["qa-tools"]

[features]
qa-tools = []

[dependencies]
forgetty-core = { path = "crates/forgetty-core" }
forgetty-config = { path = "crates/forgetty-config" }
forgetty-gtk = { path = "crates/forgetty-gtk" }
forgetty-session = { path = "crates/forgetty-session" }
forgetty-socket = { path = "crates/forgetty-socket" }
forgetty-sync = { path = "crates/forgetty-sync" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
dirs = { workspace = true }
iroh = { workspace = true }
rand = { workspace = true }
