[package]
name = "forgetty-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgetty-core = { path = "../forgetty-core" }
forgetty-config = { path = "../forgetty-config" }
forgetty-vt = { path = "../forgetty-vt" }
forgetty-pty = { path = "../forgetty-pty" }
forgetty-watcher = { path = "../forgetty-watcher" }
gtk4 = { workspace = true }
libadwaita = { workspace = true }
pangocairo = "0.20"
toml = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
