[package]
name = "forgetty-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgetty-core = { path = "../forgetty-core" }
forgetty-config = { path = "../forgetty-config" }
forgetty-vt = { path = "../forgetty-vt" }
forgetty-pty = { path = "../forgetty-pty" }
forgetty-session = { path = "../forgetty-session" }
forgetty-watcher = { path = "../forgetty-watcher" }
forgetty-workspace = { path = "../forgetty-workspace" }
gtk4 = { workspace = true }
libadwaita = { workspace = true }
pangocairo = "0.20"
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
notify-rust = { version = "4", default-features = false, features = ["d"] }
