[package]
name = "forgetty-session"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform-agnostic session manager for Forgetty terminal panes"

[dependencies]
forgetty-core = { path = "../forgetty-core" }
forgetty-pty = { path = "../forgetty-pty" }
forgetty-workspace = { path = "../forgetty-workspace" }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
