[package]
name = "forgetty-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgetty-core = { path = "../forgetty-core" }
forgetty-config = { path = "../forgetty-config" }
forgetty-vt = { path = "../forgetty-vt" }
forgetty-pty = { path = "../forgetty-pty" }
forgetty-renderer = { path = "../forgetty-renderer" }
winit = { workspace = true }
arboard = { workspace = true }
