[package]
name = "forgetty-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgetty-core = { path = "../forgetty-core" }
forgetty-config = { path = "../forgetty-config" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
